--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "vitest --config vitest.config.ts",
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
@@ -17,6 +19,7 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
+    "gh-pages": "^6.3.0",
     "jsdom": "^26.1.0",
     "vite": "^7.0.3",
     "vitest": "^3.2.4"
